src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/C4A71.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram C4A71 {

	class A;
	class B;
	
	<<theStereoType>> association assoc1 A -> B;
	<<theStereoType>> association A <- B;
	<<theStereoType>> association A <-> B;
	<<theStereoType>> association A -- B;
}